--- a/G-2301-01-P2/Makefile
+++ b/G-2301-01-P2/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -L$(LDIR) -I$(IDIR) -g `pkg-config --cflags gtk+-3.0`  
+CFLAGS = -L$(LDIR) -I$(IDIR) -g `pkg-config --cflags gtk+-3.0` -DNDEBUG 
 LDFLAGS = -lpthread -lircredes -lircinterface -lsoundredes -lredes2-G-2301-01-P2 -lsoundredes -lpulse -lpulse-simple `pkg-config --libs gtk+-3.0` -rdynamic
 AR = ar 
 
